[package]
name = "mppatch-core"
version = "0.0.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
ctor = "0.2"
enumset = { version = "1.1", features = ["serde"] }
log = { version = "0.4", features = ["std"] }
mlua = { version = "0.9", features = ["lua51", "module"] }
native-dialog = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
simplelog = { version = "0.12", features = ["paris"] }
toml = "0.8"

[target.'cfg(unix)'.dependencies]
dlopen = "0.1"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
